fix(webcomponents): fix overflow on TablePagination to cover edge cases

--- a/packages/webcomponents/src/TablePagination/TablePagination.scss
+++ b/packages/webcomponents/src/TablePagination/TablePagination.scss
@@ -8,6 +8,7 @@
   float: left;
   font-size: $fontSizeDefault;
   height: 3rem;
+  overflow-y: hidden;
   width: 100%;
 
   &Mobile {
